--- a/src/views/customers.ejs
+++ b/src/views/customers.ejs
@@ -1,9 +1,35 @@
 <%- include('partials/_header.ejs') -%>
 
+
 <div class="container">
     <div class="row mt-5">
         <div class="col-md-7">
-
+            <table class="table table-bordered table-hover">
+                <thead>
+                    <tr>
+                        <th>nº</th>
+                        <th>Name</th>
+                        <th>Address</th>
+                        <th>Phone</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% if(data){ %>
+                        <% for(var i = 0; i < data.length; i++) { %>
+                            <tr>
+                                <td><%= (i + 1) %></td>
+                                <td><%= data[i].name %></td>
+                                <td><%= data[i].address %></td>
+                                <td><%= data[i].phone %></td>
+                                <td>
+                                    <a href="/delete/<%= data[i].id %>" class="btn btn-danger">Delete</a>
+                                </td>
+                            </tr>
+                        <% } %>
+                    <% } %>
+                </tbody>
+            </table>
         </div>
         <div class="col-md-5">
             <div class="card">
